# TestFinance

./: .gitignore  LICENSE  pyproject.toml
src/: logger.py  pt_detail_mlrun.py  pt_detail_preprocess.py  pt_sum_mlrun.py  pt_sum_preprocess.py
src/ml/: ml_framework.py  nn.yaml
src/utils/: helper.py  remove_row_with_missing_values.py
