[project]
name = "finance_machine_learning"
version = "0.1.0"
description = "A simple Python project using uv for ml in area of finance research"
requires-python = ">=3.12"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pandas==2.2.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "scikit-learn==1.6.1",
    "statsmodels>=0.14.4",
    "scipy>=1.15.3",
    "pyarrow>=20.0.0",
    "catboost>=1.2.8",
    "graphviz>=0.20.3",
    "lightgbm>=4.6.0",
    "narwhals>=1.41.0",
    "plotly>=6.1.2",
    "xgboost>=3.0.2",
    "PyYAML>=6.0.2"
]